--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss-pxtorem": "^4.0.1",
         "vant": "^2.11.3",
         "vue": "^2.6.11",
+        "jwt-decode": "^2.2.0",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
