--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "good-storage": "^1.1.1",
     "jwt-decode": "^2.2.0",
+    "lyric-parser": "^1.0.1",
     "moment": "^2.29.1",
     "postcss-pxtorem": "^4.0.1",
     "vant": "^2.11.3",
