--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "better-scroll": "^1.13.2",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.0",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "cross-env": "^5.2.0",
     "good-storage": "^1.1.1",
     "jwt-decode": "^2.2.0",
     "lyric-parser": "^1.0.1",
     "moment": "^2.29.1",
     "postcss-pxtorem": "^4.0.1",
+    "swiper": "^5.4.1",
     "vant": "^2.11.3",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.0.1",
-    "cross-env": "^5.2.0"
+    "xgplayer": "^2.17.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
