--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
+    "vue-slim-better-scroll": "^1.7.1",
     "vuex": "^3.0.1",
     "xgplayer": "^2.17.1"
   },
@@ -44,6 +45,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
