--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "cross-env": "^5.2.0",
     "good-storage": "^1.1.1",
+    "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "lyric-parser": "^1.0.1",
     "moment": "^2.29.1",
