--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "postcss-px-to-viewport": "^1.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.4.0"
   },
   "eslintConfig": {
     "root": true,
@@ -65,6 +66,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead"
+    "not ie <= 8"
   ]
 }
