--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-router": "^3.2.0",
     "vue-slim-better-scroll": "^1.7.1",
     "vuex": "^3.0.1",
-    "xgplayer": "^2.17.1"
+    "xgplayer": "^2.17.1",
+    "vue-meta": "^2.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
