--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "npm run serve",
-    "serve": "cross-env NODE_ENV=development vue-cli-service serve --open",
-    "build": "cross-env NODE_ENV=production vue-cli-service build",
+    "serve": "vue-cli-service serve --open",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "amfe-flexible": "^2.2.1",
     "axios": "^0.21.0",
     "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
-    "cross-env": "^5.2.0",
     "good-storage": "^1.1.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
@@ -39,15 +37,18 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
+    "compression-webpack-plugin": "^5.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "image-webpack-loader": "^7.0.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "postcss-px-to-viewport": "^1.1.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^4.4.0"
   },
