--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "npm run serve",
+    "serve": "cross-env NODE_ENV=development vue-cli-service serve --open",
+    "build": "cross-env NODE_ENV=production vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "better-scroll": "^1.13.2",
+    "cross-env": "^5.2.0",
     "core-js": "^3.6.5",
     "good-storage": "^1.1.1",
     "js-cookie": "^2.2.1",
