--- a/package.json
+++ b/package.json
@@ -1,74 +1,73 @@
 {
-  "name": "net-music",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "npm run serve",
-    "serve": "cross-env NODE_ENV=development vue-cli-service serve --open",
-    "build": "cross-env NODE_ENV=production vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.21.0",
-    "better-scroll": "^1.13.2",
-    "cross-env": "^5.2.0",
-    "core-js": "^3.6.5",
-    "good-storage": "^1.1.1",
-    "js-cookie": "^2.2.1",
-    "jwt-decode": "^2.2.0",
-    "lyric-parser": "^1.0.1",
-    "moment": "^2.29.1",
-    "postcss-pxtorem": "^4.0.1",
-    "swiper": "^5.4.1",
-    "vant": "^2.11.3",
-    "vue": "^2.6.11",
-    "vue-awesome-swiper": "^4.1.1",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.0.1",
-    "xgplayer": "^2.17.1",
-    "vue-meta": "^2.2.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-import": "^1.13.3",
-    "compression-webpack-plugin": "^5.0.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "image-webpack-loader": "^7.0.1",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "postcss-px-to-viewport": "^1.1.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "vue-template-compiler": "^2.6.11",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-dev-server": "^4.3.1"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "net-music",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "npm run serve",
+        "serve": "cross-env NODE_ENV=development vue-cli-service serve --open",
+        "build": "cross-env NODE_ENV=production vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
+    "dependencies": {
+        "axios": "^0.21.0",
+        "better-scroll": "^1.13.2",
+        "core-js": "^3.6.5",
+        "cross-env": "^5.2.0",
+        "dayjs": "^1.10.7",
+        "good-storage": "^1.1.1",
+        "js-cookie": "^2.2.1",
+        "jwt-decode": "^2.2.0",
+        "lyric-parser": "^1.0.1",
+        "postcss-pxtorem": "^4.0.1",
+        "swiper": "^5.4.1",
+        "vant": "^2.11.3",
+        "vue": "^2.6.11",
+        "vue-awesome-swiper": "^4.1.1",
+        "vue-meta": "^2.2.1",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.0.1"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/eslint-config-standard": "^5.1.2",
+        "babel-eslint": "^10.1.0",
+        "babel-plugin-import": "^1.13.3",
+        "compression-webpack-plugin": "^5.0.1",
+        "eslint": "^6.7.2",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-vue": "^6.2.2",
+        "image-webpack-loader": "^7.0.1",
+        "less": "^3.0.4",
+        "less-loader": "^5.0.0",
+        "postcss-px-to-viewport": "^1.1.1",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "vue-template-compiler": "^2.6.11",
+        "webpack-bundle-analyzer": "^4.4.0",
+        "webpack-dev-server": "^4.3.1"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
